# cmake-cpp-minimalistic-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
app/test/: CMakeLists.txt
vectorLib/: CMakeLists.txt
vectorLib/include/vector/: Vec2.h
vectorLib/src/: Vec2.cpp
vectorLib/test/: CMakeLists.txt
vectorLib/test/src/: Vec2Test.cpp
